--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	},
 	"dependencies": {
 		"@konemono/svelte5-i18n": "^0.2.0",
-		"@lucide/svelte": "^0.525.0"
+		"@lucide/svelte": "^0.525.0",
+		"nostr-tools": "^2.15.1"
 	}
 }
